fix spacing in categories page

--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -11,3 +11,11 @@
     padding-bottom: 0 !important;
     margin-bottom: 0 !important;
 }
+
+.right-banners, .right-banners > div {
+    padding-left: 0 !important;
+}
+
+.right-banners > div:nth-of-type(2) {
+    padding-top: 0 !important;
+}
